# pocket-os

./: README.md
blog_os/: Cargo.toml
blog_os/.cargo/: config.toml
blog_os/src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
blog_os/tests/: basic_boot.rs
