[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
x86_64 = "0.14.11"

[target.'cfg(target_os = "none")']
runner = "bootimage runner"

[build]
target = "x86_64-blog_os.json"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std-feature = ["compile-builtins-mem"]
build-std = ["core", "compiler_builtins"]

[package.metadata.bootimage]
# The cargo subcommand that will be used for building the kernel.
#
# For building using the `cargo-xbuild` crate, set this to `xbuild`.
build-command = ["build"]
# The command invoked with the created bootimage (the "{}" will be replaced
# with the path to the bootable disk image)
# Applies to `bootimage run` and `bootimage runner`
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file=target/x86_64-blog_os/debug/"]

# Additional arguments passed to the run command for non-test executables
# Applies to `bootimage run` and `bootimage runner`
# run-args = []
run-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-display", "none"]

# Additional arguments passed to the run command for test executables
# Applies to `bootimage runner`
test-args = []

# An exit code that should be considered as success for test executables
test-success-exit-code = 0

# The timeout for running a test through `bootimage test` or `bootimage runner` (in seconds)
test-timeout = 300

# Whether the `-no-reboot` flag should be passed to test executables
test-no-reboot = true
